--- a/.gitmodules
+++ b/.gitmodules
@@ -127,3 +127,7 @@
 	path = cores/libretro-vecx
 	url = https://github.com/libretro/libretro-vecx.git
 	branch = master
+[submodule "cores/uae4arm-libretro"]
+	path = cores/uae4arm-libretro
+	url = https://github.com/noword/uae4arm-libretro.git
+	branch = master
