--- a/deps/CMakeLists.txt
+++ b/deps/CMakeLists.txt
@@ -129,14 +129,25 @@ target_include_directories(7zip PRIVATE ${SEVENZIP_PATH})
 # ----------------------
 add_subdirectory(simpleini)
 
+# zlib-ng
+# ----------------------
+option(ZLIB_COMPAT "" ON)
+option(ZLIB_ENABLE_TESTS "" OFF)
+option(WITH_GZFILEOP "" OFF)
+option(WITH_GTEST "" OFF)
+option(ZLIBNG_ENABLE_TESTS "" OFF)
+add_subdirectory(zlib-ng)
+
 # minizip-ng
 # ----------------------
-option(MZ_BZIP2 OFF)
-option(MZ_LZMA OFF)
-option(MZ_ZSTD OFF)
-option(MZ_PKCRYPT OFF)
-option(MZ_WZAES OFF)
-option(MZ_DECOMPRESS_ONLY ON)
+option(MZ_ZLIB "" ON)
+option(MZ_BZIP2 "" OFF)
+option(MZ_LZMA "" OFF)
+option(MZ_ZSTD "" OFF)
+option(MZ_PKCRYPT "" OFF)
+option(MZ_WZAES "" OFF)
+option(MZ_DECOMPRESS_ONLY "" ON)
+set(MZ_ZLIB ON CACHE BOOL "" FORCE)
 add_subdirectory(minizip-ng)
 
 # lz4
