--- a/apps/snes9x2005/CMakeLists.txt
+++ b/apps/snes9x2005/CMakeLists.txt
@@ -18,7 +18,7 @@ set(CORE_MAKEFILE_NAME Makefile)
 set(SFO_TITLE_NAME "Emu4Vita++ (${CORE_NAME})")
 set(SFO_TITLE_ID "SNES054VT")
 
-set(CORE_ARGS platform=vita EXTERNAL_ZLIB=1)
+set(CORE_ARGS platform=vita EXTERNAL_ZLIB=1 USE_BLARGG_APU=1)
 set(CORE_SOFTWARE "Nintendo - SNES / SFC")
 
 set(PRIVATE_PKG_DIR ${CMAKE_CURRENT_SOURCE_DIR}/pkg)
