--- a/.gitmodules
+++ b/.gitmodules
@@ -155,3 +155,7 @@
 	path = cores/FBNeo-Xtreme-Amped
 	url = https://github.com/KMFDManic/FBNeo-Xtreme-Amped.git
 	branch = master
+[submodule "cores/supafaust"]
+	path = cores/supafaust
+	url = https://github.com/Rinnegatamante/supafaust.git
+	branch = master
