--- a/apps/hatari/CMakeLists.txt
+++ b/apps/hatari/CMakeLists.txt
@@ -1,9 +1,9 @@
 cmake_minimum_required(VERSION 3.10)
 
-set(CORE_NAME "prosystem")
-set(CORE_SHORT_NAME "ProSystem")
-set(CORE_FULL_NAME "ProSystem")
-set(CONSOLE "ATARI7800")
+set(CORE_NAME "hatari")
+set(CORE_SHORT_NAME "Hatari")
+set(CORE_FULL_NAME "Hatari")
+set(CONSOLE "ATARIST")
 
 if(TARGET ${CORE_NAME}_build)
   return()
@@ -12,14 +12,14 @@ endif()
 project(${CORE_NAME})
 
 set(APP_NAME "${CORE_SHORT_NAME}4VitaPlus")
-set(CORE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../../cores/prosystem-libretro)
+set(CORE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../../cores/hatari)
 set(CORE_MAKEFILE_DIR ${CORE_DIR})
-set(CORE_MAKEFILE_NAME Makefile)
+set(CORE_MAKEFILE_NAME Makefile.libretro)
 set(SFO_TITLE_NAME "Emu4Vita++ (${CORE_NAME})")
-set(SFO_TITLE_ID "PROSYS4PV")
+set(SFO_TITLE_ID "HATARI4VP")
 
 set(CORE_ARGS platform=vita EXTERNAL_ZLIB=1)
-set(CORE_SOFTWARE, "Atari 7800")
+set(CORE_SOFTWARE, "Atari ST")
 
 set(PRIVATE_PKG_DIR ${CMAKE_CURRENT_SOURCE_DIR}/pkg)
 file(GLOB_RECURSE PKG_FILES ${PRIVATE_PKG_DIR}/*)
@@ -30,6 +30,6 @@ foreach(file ${PKG_FILES})
   list(APPEND PRIVATE_PKG_FILES FILE ${file} ${rel})
 endforeach()
 
-add_compile_definitions(STELLA2014_BUILD ATARI7800_BUILD)
+add_compile_definitions(HATARI_BUILD ATARIST_BUILD)
 
 add_subdirectory(.. ${CMAKE_CURRENT_BINARY_DIR}/app)
