--- a/apps/fbneo_xtreme/CMakeLists.txt
+++ b/apps/fbneo_xtreme/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 3.10)
 
-set(CORE_NAME "fbneo")
-set(CORE_SHORT_NAME "FBNeo")
-set(CORE_FULL_NAME "FinalBurn Neo")
+set(CORE_NAME "km_fbneo_xtreme_amped")
+set(CORE_SHORT_NAME "FBNeoXtreme")
+set(CORE_FULL_NAME "FinalBurn Neo Xtreme")
 set(CONSOLE "ARC")
 
 if(TARGET ${CORE_NAME}_build)
@@ -12,11 +12,11 @@ endif()
 project(${CORE_NAME})
 
 set(APP_NAME "${CORE_SHORT_NAME}4VitaPlus")
-set(CORE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../../cores/libretro-fbneo/src/burner/libretro)
+set(CORE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../../cores/FBNeo-Xtreme-Amped/src/burner/libretro)
 set(CORE_MAKEFILE_DIR ${CORE_DIR})
 set(CORE_MAKEFILE_NAME ${CMAKE_CURRENT_SOURCE_DIR}/Makefile)
 set(SFO_TITLE_NAME "Emu4Vita++ (${CORE_FULL_NAME})")
-set(SFO_TITLE_ID "FBNEO4VIT")
+set(SFO_TITLE_ID "FBNEOX4VP")
 
 set(CORE_ARGS platform=vita EXTERNAL_ZLIB=1 STATIC_LINKING=1)
 set(CORE_SOFTWARE "Arcade (CPS1 2 3, NEO GEO, PGM)")
@@ -30,7 +30,7 @@ foreach(file ${PKG_FILES})
   list(APPEND PRIVATE_PKG_FILES FILE ${file} ${rel})
 endforeach()
 
-add_compile_definitions(FBNEO_BUILD ARC_BUILD FBA_BUILD USE_CYCLONE INCLUDE_7Z_SUPPORT _7ZIP_PPMD_SUPPPORT _7ZIP_ST
+add_compile_definitions(FBNEOEXTREME_BUILD ARC_BUILD FBA_BUILD USE_CYCLONE INCLUDE_7Z_SUPPORT _7ZIP_PPMD_SUPPPORT _7ZIP_ST
   LSB_FIRST USE_SPEEDHACKS NO_VIZ _LARGEFILE64_SOURCE=0 _FILE_OFFSET_BITS=32)
 
 add_subdirectory(.. ${CMAKE_CURRENT_BINARY_DIR}/app)
