--- a/apps/fbneo_xtreme/Makefile
+++ b/apps/fbneo_xtreme/Makefile
@@ -16,8 +16,9 @@ HAVE_NEON = 0
 USE_EXPERIMENTAL_FLAGS = 0
 USE_CYCLONE = 0
 HAVE_UWP = 0
+# make the core smaller by removing some demanding drivers
+LIGHT = 0
 SPLIT_UP_LINK ?= 0
-REGEN_HEADERS ?= 0
 
 SPACE :=
 SPACE := $(SPACE) $(SPACE)
@@ -57,12 +58,12 @@ MAIN_FBNEO_DIR	:= ../..
 VERSION_SCRIPT	:= $(MAIN_FBNEO_DIR)/burner/libretro/link.T
 
 # TARGET
-ifeq ($(SUBSET),)
-	TARGET_NAME := fbneo
-	INCLUDED_MAKEFILE = Makefile.all
+ifeq ($(subset),)
+	TARGET_NAME := km_fbneo_xtreme_amped
+	INCLUDED_MAKEFILE = Makefile.common
 else
-	TARGET_NAME := fbneo_$(SUBSET)
-	INCLUDED_MAKEFILE = Makefile.$(SUBSET)
+	TARGET_NAME := fbneo_$(subset)
+	INCLUDED_MAKEFILE = Makefile.$(subset)
 endif
 
 # Unix
@@ -223,6 +224,7 @@ else ifneq (,$(filter $(platform), ps3 psl1ght))
 	EXTERNAL_ZLIB = 1
 	STATIC_LINKING = 1
 	INCLUDE_7Z_SUPPORT = 0
+#	LIGHT = 1
 
 	CC = $(PS3DEV)/ppu/bin/ppu-$(COMMONLV)gcc$(EXE_EXT)
 	CXX = $(PS3DEV)/ppu/bin/ppu-$(COMMONLV)g++$(EXE_EXT)
@@ -248,19 +250,10 @@ else ifeq ($(platform), vita)
 			  -fdata-sections -ffunction-sections \
 			  -DTHREADY_PTHREAD
 	ASFLAGS += -mcpu=cortex-a9
-#    CFLAGS += -mfloat-abi=hard -fsingle-precision-constant \
-#     -marm -mcpu=cortex-a9 -mfpu=neon -DVITA -D__vita__ -O3
-    # -mword-relocations -fno-optimize-sibling-calls \
-    # -fomit-frame-pointer -fno-unwind-tables -fno-asynchronous-unwind-tables \
-    # -ffast-math -ftree-vectorize -O3
-#    CXXFLAGS += -mfloat-abi=hard -fsingle-precision-constant \
-#      -marm -mcpu=cortex-a9 -mfpu=neon -DVITA -D__vita__ \
-#      -fpermissive -fno-rtti -O3
-    #  -mword-relocations -fno-optimize-sibling-calls \
-    #  -fomit-frame-pointer -fno-unwind-tables -fno-asynchronous-unwind-tables \
-    #  -ffast-math -ftree-vectorize -O3 \
-    #  -fno-rtti -std=gnu++17
-
+	
+	#CFLAGS += -mfloat-abi=hard -fsingle-precision-constant
+	#CXXFLAGS += -mfloat-abi=hard -fsingle-precision-constant -fpermissive -fno-rtti
+	
 	EXTERNAL_ZLIB = 1
 	STATIC_LINKING = 1
 	USE_CYCLONE = 1
@@ -328,6 +321,7 @@ else ifeq ($(platform), funkey)
 	USE_EXPERIMENTAL_FLAGS = 1
 	HAVE_NEON = 1
 	USE_CYCLONE = 1
+	LIGHT = 1
 	ARCH = arm
 	ENDIANNESS_DEFINES := -DLSB_FIRST
 	ifeq ($(shell echo `$(CC) -dumpversion` "< 4.9" | bc -l), 1)
@@ -395,7 +389,7 @@ else ifneq (,$(filter $(platform), ngc wii wiiu))
 	CXX = powerpc-eabi-g++$(EXE_EXT)
 	AR = powerpc-eabi-ar$(EXE_EXT)
 	ENDIANNESS_DEFINES =  -DWORDS_BIGENDIAN
-	PLATFORM_DEFINES := -ffunction-sections -fdata-sections -D__wiiu__ -D__wut__ -UPPC
+	PLATFORM_DEFINES := -U__INT32_TYPE__ -U __UINT32_TYPE__ -D__INT32_TYPE__=int -UPPC
 	EXTERNAL_ZLIB = 1
 	STATIC_LINKING = 1
 
@@ -406,10 +400,12 @@ else ifneq (,$(filter $(platform), ngc wii wiiu))
 	# Nintendo Wii
 	else ifneq (,$(findstring wii,$(platform)))
 		PLATFORM_DEFINES += -DGEKKO -DHW_RVL -mrvl -mcpu=750 -meabi -mhard-float
+		LIGHT = 1
 
 	# Nintendo Game Cube
 	else ifneq (,$(findstring ngc,$(platform)))
 		PLATFORM_DEFINES += -DGEKKO -DHW_DOL -mrvl -mcpu=750 -meabi -mhard-float
+		LIGHT = 1
 	endif
 
 # Emscripten
@@ -529,7 +525,6 @@ endif
 CC_SYSTEM = gcc
 CXX_SYSTEM = g++
 
-include Makefile.common
 include $(INCLUDED_MAKEFILE)
 
 FBNEO_CXXOBJ := $(SOURCES_CXX:.cpp=.o)
@@ -630,14 +625,14 @@ ifeq (,$(findstring msvc,$(platform)))
 endif
 
 # gcc specific flags
-# ifeq ($(shell $(CC) -v 2>&1 | grep -c "gcc version"), 1)
-# 	CFLAGS += -ffloat-store
-# 	CXXFLAGS += -ffloat-store
-# 	ifeq ($(shell expr `$(CC) -dumpversion | cut -f1 -d.` \>= 5), 1)
-# 		CFLAGS += -finline-limit=1200 -fcheck-new
-# 		CXXFLAGS += -finline-limit=1200 -fcheck-new
-# 	endif
-# endif
+#ifeq ($(shell $(CC) -v 2>&1 | grep -c "gcc version"), 1)
+#	CFLAGS += -ffloat-store
+#	CXXFLAGS += -ffloat-store
+#	ifeq ($(shell expr `$(CC) -dumpversion | cut -f1 -d.` \>= 5), 1)
+#		CFLAGS += -finline-limit=1200 -fcheck-new
+#		CXXFLAGS += -finline-limit=1200 -fcheck-new
+#	endif
+#endif
 
 PERL = perl$(EXE_EXT)
 M68KMAKE_EXE = m68kmake$(EXE_EXT)
@@ -645,16 +640,17 @@ CTVMAKE_EXE = ctvmake$(EXE_EXT)
 PGM_SPRITE_CREATE_EXE = pgmspritecreate$(EXE_EXT)
 EXE_PREFIX = ./
 
-# backward compatibility (make less than 4.4 doesn't support .WAIT)
-.WAIT:
+.PHONY: clean generate-files generate-files-clean clean-objs
 
-.PHONY: all clean generate-files generate-files-clean clean-objs
-
-ifeq ($(REGEN_HEADERS), 1)
-all: generate-files clean-objs .WAIT $(TARGET)
+ifeq ($(platform), theos_ios)
+	COMMON_FLAGS := -DIOS -DARM $(COMMON_DEFINES) $(INCFLAGS) -I$(THEOS_INCLUDE_PATH) -Wno-error
+	$(LIBRARY_NAME)_CFLAGS += $(CFLAGS) $(COMMON_FLAGS)
+	$(LIBRARY_NAME)_CXXFLAGS += $(CXXFLAGS) $(COMMON_FLAGS)
+	${LIBRARY_NAME}_FILES = $(SOURCES_CXX) $(SOURCES_C)
+	include $(THEOS_MAKE_PATH)/library.mk
 else
 all: $(TARGET)
-endif
+
 
 generate-files-clean:
 	rm -rf $(FBNEO_GENERATED_DIR)/
@@ -784,3 +780,4 @@ endif
 	rm -f $(M68KMAKE_EXE)
 	rm -f $(PGM_SPRITE_CREATE_EXE)
 	rm -f $(CTVMAKE_EXE)
+endif
