--- a/apps/snes9x2005/CMakeLists.txt
+++ b/apps/snes9x2005/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 3.10)
 
-set(CORE_NAME "snes9x2005")
+set(CORE_NAME "snes9x2005_plus")
 set(CORE_SHORT_NAME "Snes9x2005")
-set(CORE_FULL_NAME "Snes9x 2005")
+set(CORE_FULL_NAME "Snes9x 2005 Plus")
 set(CONSOLE "SNES")
 
 if(TARGET ${CORE_NAME}_build)
@@ -12,7 +12,7 @@ endif()
 project(${CORE_NAME})
 
 set(APP_NAME "${CORE_SHORT_NAME}4VitaPlus")
-set(CORE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../../cores/${CORE_NAME})
+set(CORE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../../cores/snes9x2005)
 set(CORE_MAKEFILE_DIR ${CORE_DIR})
 set(CORE_MAKEFILE_NAME Makefile)
 set(SFO_TITLE_NAME "Emu4Vita++ (${CORE_NAME})")
