--- a/deps/minizip-ng/CMakeLists.txt
+++ b/deps/minizip-ng/CMakeLists.txt
@@ -222,12 +222,11 @@ if(MZ_ZLIB)
         list(APPEND MINIZIP_INC ${ZLIB_BINARY_DIR})
 
         # Have to add zlib to install targets
-        if(ZLIB_COMPAT AND(NOT DEFINED BUILD_SHARED_LIBS OR NOT BUILD_SHARED_LIBS))
-            list(APPEND MINIZIP_DEP zlibstatic)
-        else()
-            list(APPEND MINIZIP_DEP zlib)
-        endif()
-
+        # if(ZLIB_COMPAT AND(NOT DEFINED BUILD_SHARED_LIBS OR NOT BUILD_SHARED_LIBS))
+        # list(APPEND MINIZIP_DEP zlibstatic)
+        # else()
+        # list(APPEND MINIZIP_DEP zlib)
+        # endif()
         if(EXISTS "${ZLIB_BINARY_DIR}/zlib-ng.h")
             message(STATUS "ZLIB repository detected as ZLIBNG")
             set(ZLIB_COMPAT OFF)
