add crt-mattias shader

--- a/share/pkg/assets/shaders/shaders.ini
+++ b/share/pkg/assets/shaders/shaders.ini
@@ -5,10 +5,11 @@
 003=crt-lottes
 004=crt-lottes-fast
 005=zfast_crt
-006=advanced-aa
-007=scale2xplus
-008=sharp-bilinear
-009=sharp-bilinear-simple
-010=gba-color
-011=gbc-color
-012=gba-color+lcd3x
+006=crt-mattias
+007=advanced-aa
+008=scale2xplus
+009=sharp-bilinear
+010=sharp-bilinear-simple
+011=gba-color
+012=gbc-color
+013=gba-color+lcd3x
