--- a/share/pkg/assets/shaders/shaders.ini
+++ b/share/pkg/assets/shaders/shaders.ini
@@ -13,4 +13,6 @@
 011=gba-color
 012=gbc-color
 013=gba-color+lcd3x
-014=gb-palette
+014=gb-palette-dmg
+015=gb-palette-pocket
+016=gb-palette-light
