--- a/share/pkg/assets/overlays/overlays.ini
+++ b/share/pkg/assets/overlays/overlays.ini
@@ -10,18 +10,24 @@ image_name="02.Universal_Scanline_2X.png"
 image_name="03.Universal_Scanline+RGB_2X.png"
 
 #from https://github.com/Duimon/Retroarch-Overlays
-[【Universal】TV]
-image_name="04.Universal_tv.png"
-viewport_width=672
-viewport_height=514
+[【Universal】TV Flat]
+image_name="04.Universal_tv_flat.png"
+viewport_width=676
+viewport_height=512
 
-[【Universal】 TV integer]
-image_name="05.Universal_tv-integer.png"
-viewport_width=500
-viewport_height=440
+[【Universal】TV]
+image_name="05.Universal_tv.png"
+viewport_width=606
+viewport_height=454
+
+#from https://github.com/libretro/common-overlays
+[【Universal】TV integer]
+image_name="06.Universal_tv-integer.png"
+viewport_width=510
+viewport_height=444
 
 #from https://github.com/TreyM/classic-crt-collection
-[【Universal】 Sony PVM Office]
-image_name="06.Universal_SonyPVMOffice.png"
-viewport_width=480
-viewport_height=360
+[【Universal】Sony PVM Office]
+image_name="07.Universal_SonyPVMOffice.png"
+viewport_width=528
+viewport_height=402
