--- a/share/CMakeLists.txt
+++ b/share/CMakeLists.txt
@@ -16,10 +16,14 @@ add_custom_command(
     OUTPUT
     ${CMAKE_CURRENT_SOURCE_DIR}/source/language_define.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/source/language_define.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/../frontend/source/language_frontend.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/../frontend/source/language_frontend.cpp
 
     COMMAND python export.py
     COMMAND mv language_define.h ${CMAKE_CURRENT_SOURCE_DIR}/source
     COMMAND mv language_define.cpp ${CMAKE_CURRENT_SOURCE_DIR}/source
+    COMMAND mv language_frontend.h ${CMAKE_CURRENT_SOURCE_DIR}/../frontend/source/language_frontend.h
+    COMMAND mv language_frontend.cpp ${CMAKE_CURRENT_SOURCE_DIR}/../frontend/source/language_frontend.cpp
 
     WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/../script
 
@@ -32,7 +36,9 @@ add_custom_target(
     lang_cpp
     DEPENDS
     ${CMAKE_CURRENT_SOURCE_DIR}/source/language_define.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/source/language_define.h)
+    ${CMAKE_CURRENT_SOURCE_DIR}/source/language_define.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/../frontend/source/language_frontend.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/../frontend/source/language_frontend.cpp)
 
 file(GLOB SRC source/*.cpp)
 
