--- a/share/CMakeLists.txt
+++ b/share/CMakeLists.txt
@@ -17,7 +17,7 @@ add_custom_command(
     ${CMAKE_CURRENT_SOURCE_DIR}/source/language_define.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/source/language_define.h
 
-    COMMAND python export.py
+    COMMAND python export_share.py
     COMMAND mv language_define.h ${CMAKE_CURRENT_SOURCE_DIR}/source
     COMMAND mv language_define.cpp ${CMAKE_CURRENT_SOURCE_DIR}/source
 
@@ -25,12 +25,11 @@ add_custom_command(
 
     DEPENDS
     ${CMAKE_CURRENT_SOURCE_DIR}/../script/language.json
-    ${CMAKE_CURRENT_SOURCE_DIR}/../script/translation.json
-    ${CMAKE_CURRENT_SOURCE_DIR}/../script/export.py
+    ${CMAKE_CURRENT_SOURCE_DIR}/../script/export_share.py
 )
 
 add_custom_target(
-    lang_cpp
+    LANG_SHARE
     DEPENDS
     ${CMAKE_CURRENT_SOURCE_DIR}/source/language_define.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/source/language_define.h)
@@ -47,4 +46,4 @@ include_directories(
     ../deps/lz4/lib)
 
 add_library(share STATIC ${SRC})
-add_dependencies(share lang_cpp)
+add_dependencies(share LANG_SHARE)
