disable cyclone in mame2003

--- a/apps/mame2003_xtreme/CMakeLists.txt
+++ b/apps/mame2003_xtreme/CMakeLists.txt
@@ -14,7 +14,7 @@ project(${CORE_NAME})
 set(APP_NAME "${CORE_SHORT_NAME}4VitaPlus")
 set(CORE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../../cores/mame2003-xtreme)
 set(CORE_MAKEFILE_DIR ${CORE_DIR})
-set(CORE_MAKEFILE_NAME ${CMAKE_CURRENT_SOURCE_DIR}/Makefile)
+set(CORE_MAKEFILE_NAME Makefile)
 set(SFO_TITLE_NAME "Emu4Vita++ (${CORE_FULL_NAME})")
 set(SFO_TITLE_ID "MAME2K3XV")
 
