--- a/apps/mame2003/Makefile
+++ b/apps/mame2003/Makefile
@@ -457,7 +457,7 @@ else ifeq ($(platform), vita)
 	TARGET = $(TARGET_NAME)_libretro_$(platform).a
 	CC = arm-vita-eabi-gcc$(EXE_EXT)
 	AR = arm-vita-eabi-ar$(EXE_EXT)
-	PLATCFLAGS += -DVITA -marm
+	PLATCFLAGS += -DVITA -mthumb
 	CFLAGS += -mfloat-abi=hard -fsingle-precision-constant
 	CFLAGS += -Wall -mword-relocations
 	CFLAGS += -fomit-frame-pointer -ffast-math
@@ -468,7 +468,7 @@ else ifeq ($(platform), vita)
 	HAVE_RZLIB := 1
 	ARM = 1
 	STATIC_LINKING := 1
-	USE_CYCLONE := 1
+	#USE_CYCLONE := 1
 	USE_DRZ80 := 1
 
 # ARMv
