--- a/apps/mame2003_plus/Makefile
+++ b/apps/mame2003_plus/Makefile
@@ -469,7 +469,7 @@ else ifeq ($(platform), vita)
 	TARGET = $(TARGET_NAME)_libretro_$(platform).a
 	CC = arm-vita-eabi-gcc$(EXE_EXT)
 	AR = arm-vita-eabi-ar$(EXE_EXT)
-	PLATCFLAGS += -DVITA -marm
+	PLATCFLAGS += -DVITA -mthumb
 	CFLAGS += -mfloat-abi=hard -fsingle-precision-constant
 	CFLAGS += -Wall -mword-relocations
 	CFLAGS += -fomit-frame-pointer -ffast-math
@@ -481,7 +481,7 @@ else ifeq ($(platform), vita)
 	ARM = 1
 	HAVE_ARMv6 = 1
 	STATIC_LINKING := 1
-	USE_CYCLONE := 1
+	#USE_CYCLONE := 1
 	USE_DRZ80 := 1
 
 # ARMv
