--- a/arch/CMakeLists.txt
+++ b/arch/CMakeLists.txt
@@ -202,7 +202,9 @@ target_link_libraries(
     SceShellSvc_stub
     SceMotion_stub
     SceHid_stub
-    SceFiber_stub)
+    SceFiber_stub
+    SceHttp_stub
+    SceSsl_stub)
 
 set(VITA_MAKE_FSELF_FLAGS "-a 0x2800000000000001")
 vita_create_self(eboot_${APP_NAME}.bin ${APP_NAME}.elf STRIPPED REL_OPTIMIZE)
