--- a/apps/gpsp/CMakeLists.txt
+++ b/apps/gpsp/CMakeLists.txt
@@ -5,12 +5,12 @@ set(CORE_SHORT_NAME "gpSP")
 set(CORE_FULL_NAME "gpSP")
 set(CONSOLE "GBA")
 
-if(TARGET ${CORE_NAME}_build)
-  return()
-endif()
+# if(TARGET ${CORE_NAME}_build)
+# return()
+# endif()
+# message(xxx)
 
-project(${CORE_NAME})
-
+# project(${CORE_NAME})
 set(APP_NAME "${CORE_SHORT_NAME}4VitaPlus")
 set(CORE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../../cores/${CORE_NAME})
 set(CORE_MAKEFILE_DIR ${CORE_DIR})
@@ -21,15 +21,13 @@ set(SFO_TITLE_ID "GPSP4VITA")
 set(CORE_ARGS platform=vita EXTERNAL_ZLIB=1)
 set(CORE_SOFTWARE "Nintendo - Game Boy Advance")
 
-set(PRIVATE_PKG_DIR ${CMAKE_CURRENT_SOURCE_DIR}/pkg)
-file(GLOB_RECURSE PKG_FILES ${PRIVATE_PKG_DIR}/*)
-set(PRIVATE_PKG_FILES "")
+# set(PRIVATE_PKG_DIR ${CMAKE_CURRENT_SOURCE_DIR}/pkg)
+# file(GLOB_RECURSE PKG_FILES ${PRIVATE_PKG_DIR}/*)
+# set(PRIVATE_PKG_FILES "")
 
-foreach(file ${PKG_FILES})
-  file(RELATIVE_PATH rel ${PRIVATE_PKG_DIR} ${file})
-  list(APPEND PRIVATE_PKG_FILES FILE ${file} ${rel})
-endforeach()
-
+# foreach(file ${PKG_FILES})
+# file(RELATIVE_PATH rel ${PRIVATE_PKG_DIR} ${file})
+# list(APPEND PRIVATE_PKG_FILES FILE ${file} ${rel})
+# endforeach()
 add_compile_definitions(GPSP_BUILD GBA_BUILD)
-
-add_subdirectory(.. ${CMAKE_CURRENT_BINARY_DIR}/app)
+add_subdirectory(.. ${CMAKE_CURRENT_BINARY_DIR}/..)
